--- a/products.html
+++ b/products.html
@@ -9,10 +9,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SYNTHEMICA</title>
 	<meta name="description"
-		content="Medivesta Laboratories Private Limited is a leading analytical laboratory providing high quality testing and analytical services to the animal health industry.">
+		content="Synthemica Private Limited is a globally recognized organization specializing in the sourcing of high-quality raw materials and advanced manufacturing solutions.">
 	<meta name="keywords"
-		content="medivesta, veterinary laboratory, animal health testing, analytical services, feed analysis, mycotoxin testing, chemical identification, R&D formulations, veterinary diagnostics">
-	<meta name="author" content="medivesta.com">
+		content="As a proud member of its parent group, Synthemica is committed to maintaining international quality standards, ensuring excellence, reliability, and compliance across all its manufacturing and supply operations.">
+	<meta name="author" content="synthemica.com">
 
 	<!-- ==============================================
 	Favicons
@@ -434,13 +434,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
-						<p class="ftex">&copy; 2025 Medivesta Laboratory (Pvt) Ltd. - All Rights Reserved |
+						<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
 							Design & Developed by IT Department</p>
 					</div>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 	<!-- JS VENDOR -->
