--- a/about-company.html
+++ b/about-company.html
@@ -7,12 +7,12 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MEDIVESTA</title>
+	<title>SYNTHEMICA</title>
 	<meta name="description"
-		content="Medivesta Laboratories Private Limited is a leading analytical laboratory providing high quality testing and analytical services to the animal health industry.">
+		content="Synthemica Private Limited is a globally recognized organization specializing in the sourcing of high-quality raw materials and advanced manufacturing solutions.">
 	<meta name="keywords"
-		content="medivesta, veterinary laboratory, animal health testing, analytical services, feed analysis, mycotoxin testing, chemical identification, R&D formulations, veterinary diagnostics">
-	<meta name="author" content="medivesta.com">
+		content="As a proud member of its parent group, Synthemica is committed to maintaining international quality standards, ensuring excellence, reliability, and compliance across all its manufacturing and supply operations.">
+	<meta name="author" content="synthemica.com">
 
 	<!-- ==============================================
 	Favicons
@@ -65,9 +65,6 @@
 					<div class="col-sm-7 col-md-6">
 						<div class="topbar-right">
 							<ul class="topbar-menu">
-								<!-- <li><a href="career.html" title="Career">Career</a></li>
-								<li><a href="contact-feedback.html" title="Give Feedback">Give Feedback</a></li>
-								<li><a href="Contact.html" title="Contact Us">Contact Us</a></li> -->
 							</ul>
 							<ul class="topbar-sosmed">
 								<li>
@@ -149,13 +146,6 @@
 					<nav class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-left">
 							<li><a href="index.html">HOME</a></li>
-							<!-- <li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="index.html">HOMEPAGE 1</a></li>
-								<li><a href="index-2.html">HOMEPAGE 2</a></li>
-							  </ul>
-							</li> -->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
 									role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
@@ -171,64 +161,7 @@
 							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
 							<li><a href="career.html">CAREERS</a></li>
 							<li><a href="contact.html">CONTACT US</a></li>
-							<!-- <li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="services.html">SERVICES 1</a></li>
-								<li><a href="services-2.html">SERVICES 2</a></li>
-								<li><a href="services-detail.html">SERVICES DETAIL</a></li>
-							  </ul>
-							</li> 
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PAGES 4<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="faq.html">FAQ</a></li>
-								<li><a href="pricing-table.html">PRICING TABLE</a></li>
-								<li><a href="404page.html">404 PAGE</a></li>
-								<li><a href="career.html">CAREER</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROJECTS 5<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="project-grid.html">GRID LAYOUT</a></li>
-								<li><a href="project-grid-2.html">GRID LAYOUT WITH LIGHTBOX</a></li>
-								<li><a href="project-detail.html">SINGLE PROJECT</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS 6<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="news-grid.html">GRID BAR</a></li>
-								<li><a href="news-sidebar.html">SIDEBAR</a></li>
-								<li><a href="news-detail.html">SINGLE NEWS</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT 7<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="contact.html">CONTACT US</a></li>
-								<li><a href="contact-quote.html">GET A QUOTE</a></li>
-							  </ul>
-							</li>-->
-
 						</ul>
-
-						<!-- <ul class="nav navbar-nav navbar-right">
-							<li class="dropdown">
-							  	<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search"></i></a>
-						  		<ul class="dropdown-menu">
-									<li>
-										<form class="navbar-form navbar-left" role="search">
-										  <div class="form-group">
-										    <input type="text" class="form-control" placeholder="Type and hit enter">
-										  </div>
-										</form>
-									</li>
-							  	</ul>
-							</li>
-						</ul> -->
-
 					</nav>
 
 				</div>
@@ -317,12 +250,6 @@
 					</div>
 					<div class="margin-bottom-30"></div>
 				</div>
-				<!-- <div class="col-sm-5 col-md-5">
-					<div class="jumbo-heading">
-						<h1>WHO</h1>
-						<h2>WE ARE?</h2>
-					</div>
-				</div> -->
 				<div class="col-sm-7 col-md-7">
 					<p class="lead"><strong>Synthemica (Pvt) Ltd,</strong> Synthemica Private Limited is a globally
 						recognized organization
@@ -343,42 +270,6 @@
 	<!-- Statistic -->
 	<div class="section statistic bgsection">
 		<div class="container">
-			<!-- <div class="row">
-
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							10
-						</div>
-						<div class="counter-title">Offices<br> Worldwide </div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							10
-						</div>
-						<div class="counter-title">Refineries &amp; <br>Operations</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							5700
-						</div>
-						<div class="counter-title">Satisfied<br>Employees</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							22
-						</div>
-						<div class="counter-title">Awards &amp; <br>Recognitions</div>
-					</div>
-				</div>
-
-			</div> -->
 		</div>
 	</div>
 
@@ -475,88 +366,6 @@
 		</div>
 	</div>
 
-	<!-- Statistic -->
-	<!-- <div class="section statistic bgsection">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							10
-						</div>
-						<div class="counter-title">Offices<br> Worldwide </div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							10
-						</div>
-						<div class="counter-title">Refineries &amp; <br>Operations</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							5700
-						</div>
-						<div class="counter-title">Satisfied<br>Employees</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="counter-1">
-						<div class="counter-number">
-							22
-						</div>
-						<div class="counter-title">Awards &amp; <br>Recognitions</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div> -->
-
-	<!-- WHY -->
-	<!-- <div class="section why">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-
-				</div>
-				<div class="col-sm-6 col-md-6">
-
-					<h3>Our Mission</h3>
-					<p>Renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat.</p>
-					<ul class="bull">
-						<li>Offer a broad range of cost-effective industrial solutions</li>
-						<li>Maintain a robust inventory of parts and products</li>
-						<li>Provide repair services to a diverse customer base across multiple sectors</li>
-						<li>Remain responsive to our customers’ needs</li>
-						<li>Work fewer hours — and make more money</li>
-						<li>Attract and retain quality, high-paying customers</li>
-						<li>Manage your time so you’ll get more done in less time</li>
-
-					</ul>
-
-				</div>
-				<div class="col-sm-6 col-md-6">
-					<div class="vidimg">
-						<div class="play-vid">
-							<a class="popup-youtube" href="https://www.youtube.com/watch?v=JGYuCRYFxew"><span
-									class="fa fa-play fa-3x playvid"></span></a>
-						</div>
-						<img src="images/800x600.jpg" alt="" class="img-responsive">
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div> -->
-
-
-
 	<!-- FOOTER SECTION -->
 	<div class="footer">
 
@@ -566,7 +375,7 @@
 				<div class="col-sm-3 col-md-3">
 					<div class="footer-item">
 						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
-						<p>Verified • Validated • Trusted</p>
+						<p>Sourced • Manufactured • Assured</p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
 								<div class="item">
@@ -648,7 +457,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
-						<p class="ftex">&copy; 2025 Medivesta Laboratory (Pvt) Ltd. - All Rights Reserved |
+						<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
 							Design & Developed by IT Department</p>
 					</div>
 				</div>
