--- a/products.html
+++ b/products.html
@@ -144,7 +144,7 @@
 					</a>
 
 					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-left">
+						<ul class="nav navbar-nav navbar-center">
 							<li><a href="index.html">HOME</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -156,11 +156,13 @@
 									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
 								</ul>
 							</li>
+							<li><a href="products.html">PRODUCTS</a></li>
 							<li><a href="services.html">SERVICES</a></li>
 							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
 							<li><a href="career.html">CAREERS</a></li>
 							<li><a href="contact.html">CONTACT US</a></li>
 						</ul>
+					</nav>
 					</nav>
 				</div>
 			</div>
@@ -188,16 +190,16 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<nav class="categories">
-					<ul class="portfolio_filter dark">
-						<li><a href="" class="active" data-filter="*">all</a></li>
-						<li><a href="" data-filter=".eco">Raw Materials</a></li>
-						<li><a href="" data-filter=".manufacturing">vitamins</a></li>
-						<li><a href="" data-filter=".industry">Industry</a></li>
-						<li><a href="" data-filter=".oil">Oil</a></li>
-						<li><a href="" data-filter=".gas">Gas</a></li>
-						<li><a href="" data-filter=".factory">Factory</a></li>
-					</ul>
-				</nav>
+						<ul class="portfolio_filter dark">
+							<li><a href="" class="active" data-filter="*">all</a></li>
+							<li><a href="" data-filter=".eco">Raw Materials</a></li>
+							<li><a href="" data-filter=".manufacturing">vitamins</a></li>
+							<li><a href="" data-filter=".industry">Industry</a></li>
+							<li><a href="" data-filter=".oil">Oil</a></li>
+							<li><a href="" data-filter=".gas">Gas</a></li>
+							<li><a href="" data-filter=".factory">Factory</a></li>
+						</ul>
+					</nav>
 				</div>
 			</div>
 			<div class="row grid-services">
@@ -340,7 +342,7 @@
 
 			</div>
 		</div>
-	</div>	
+	</div>
 
 
 	<!-- FOOTER SECTION -->
