--- a/about-company.html
+++ b/about-company.html
@@ -144,7 +144,7 @@
 					</a>
 
 					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-left">
+						<ul class="nav navbar-nav navbar-center">
 							<li><a href="index.html">HOME</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -152,18 +152,17 @@
 										class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="about-company.html">OUR COMPANY</a></li>
-									<!-- <li><a href="about-history.html">COMPANY HISTORY</a></li> -->
 									<li><a href="about-team.html">OUR TEAM</a></li>
 									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
 								</ul>
 							</li>
+							<li><a href="products.html">PRODUCTS</a></li>
 							<li><a href="services.html">SERVICES</a></li>
 							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
 							<li><a href="career.html">CAREERS</a></li>
 							<li><a href="contact.html">CONTACT US</a></li>
 						</ul>
 					</nav>
-
 				</div>
 			</div>
 		</div>
