--- a/contact.html
+++ b/contact.html
@@ -144,11 +144,11 @@
 					</div>
 
 					<a class="navbar-brand" href="index.html">
-						<img src="images/MEDIVESTA.png" alt="" />
+						<img src="images/SYNTHEMICA.png" alt="" />
 					</a>
 
 					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-left">
+						<ul class="nav navbar-nav navbar-center">
 							<li><a href="index.html">HOME</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
@@ -160,6 +160,7 @@
 									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
 								</ul>
 							</li>
+							<li><a href="products.html">PRODUCTS</a></li>
 							<li><a href="services.html">SERVICES</a></li>
 							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
 							<li><a href="career.html">CAREERS</a></li>
@@ -398,7 +399,7 @@
 				</div>
 			</div>
 		</div>v>
-		</div>
+	</div>
 
 	</div>
 
