--- a/services.html
+++ b/services.html
@@ -143,95 +143,29 @@
 					</div>
 
 					<a class="navbar-brand" href="index.html">
-						<img src="images/MEDIVESTA.png" alt="" />
+						<img src="images/SYNTHEMICA.png" alt="" />
 					</a>
 
 					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-left">
+						<ul class="nav navbar-nav navbar-center">
 							<li><a href="index.html">HOME</a></li>
-							<!-- <li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="index.html">HOMEPAGE 1</a></li>
-								<li><a href="index-2.html">HOMEPAGE 2</a></li>
-							  </ul>
-							</li> -->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
 									role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
 										class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="about-company.html">OUR COMPANY</a></li>
-									<!-- <li><a href="about-history.html">COMPANY HISTORY</a></li> -->
 									<li><a href="about-team.html">OUR TEAM</a></li>
 									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
 								</ul>
 							</li>
+							<li><a href="products.html">PRODUCTS</a></li>
 							<li><a href="services.html">SERVICES</a></li>
 							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
 							<li><a href="career.html">CAREERS</a></li>
 							<li><a href="contact.html">CONTACT US</a></li>
-							<!-- <li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="services.html">SERVICES 1</a></li>
-								<li><a href="services-2.html">SERVICES 2</a></li>
-								<li><a href="services-detail.html">SERVICES DETAIL</a></li>
-							  </ul>
-							</li> 
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PAGES 4<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="faq.html">FAQ</a></li>
-								<li><a href="pricing-table.html">PRICING TABLE</a></li>
-								<li><a href="404page.html">404 PAGE</a></li>
-								<li><a href="career.html">CAREER</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROJECTS 5<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="project-grid.html">GRID LAYOUT</a></li>
-								<li><a href="project-grid-2.html">GRID LAYOUT WITH LIGHTBOX</a></li>
-								<li><a href="project-detail.html">SINGLE PROJECT</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NEWS 6<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="news-grid.html">GRID BAR</a></li>
-								<li><a href="news-sidebar.html">SIDEBAR</a></li>
-								<li><a href="news-detail.html">SINGLE NEWS</a></li>
-							  </ul>
-							</li>
-							<li class="dropdown">
-							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT 7<span class="caret"></span></a>
-							  <ul class="dropdown-menu">
-								<li><a href="contact.html">CONTACT US</a></li>
-								<li><a href="contact-quote.html">GET A QUOTE</a></li>
-							  </ul>
-							</li>-->
-
 						</ul>
-
-						<!-- <ul class="nav navbar-nav navbar-right">
-							<li class="dropdown">
-							  	<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search"></i></a>
-						  		<ul class="dropdown-menu">
-									<li>
-										<form class="navbar-form navbar-left" role="search">
-										  <div class="form-group">
-										    <input type="text" class="form-control" placeholder="Type and hit enter">
-										  </div>
-										</form>
-									</li>
-							  	</ul>
-							</li>
-						</ul> -->
-
 					</nav>
-
-
 				</div>
 			</div>
 		</div>
