--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 							<div class="heading">Email Support</div>
 							<a href="mailto:info@medivesta.com?subject=Customer Inquiry"
 								style="text-decoration:none; color:#333;">
-								info@medivesta.com
+								info@synthemica.com
 							</a>
 						</div>
 					</div>
@@ -207,7 +207,7 @@
 								<div class="info-icon">
 									<span class="fa fa-map-marker"></span>
 								</div>
-								<div class="info-text">No.85, Industrial Zone, Homagama, Sri Lanka - 10200</div>
+								<div class="info-text">No.88, Industrial Zone, Homagama, Sri Lanka - 10200</div>
 							</li>
 							<li>
 								<div class="info-icon">
@@ -219,7 +219,7 @@
 								<div class="info-icon">
 									<span class="fa fa-envelope"></span>
 								</div>
-								<div class="info-text">info@medivesta.com</div>
+								<div class="info-text">info@synthemica.com</div>
 							</li>
 							<li>
 								<div class="info-icon">
@@ -398,7 +398,7 @@
 					</div>
 				</div>
 			</div>
-		</div>v>
+		</div>
 	</div>
 
 	</div>
