--- a/about-company.html
+++ b/about-company.html
@@ -140,7 +140,7 @@
 					</div>
 
 					<a class="navbar-brand" href="index.html">
-						<img src="images/SYNTHEMICA.png" alt="" />
+						<img src="images/SYNTHEMICA.png" alt="" style="width: 197; height: 71;"/>
 					</a>
 
 					<nav class="navbar-collapse collapse">
