--- a/about-team.html
+++ b/about-team.html
@@ -58,7 +58,7 @@
 					<div class="col-sm-5 col-md-6">
 						<div class="topbar-left">
 							<div class="welcome-text">
-								Verified • Validated • Trusted
+								Sourced • Manufactured • Assured
 							</div>
 						</div>
 					</div>
@@ -102,9 +102,9 @@
 						</div>
 						<div class="body-content">
 							<div class="heading">Email Support</div>
-							<a href="mailto:info@medivesta.com?subject=Customer Inquiry"
+							<a href="mailto:info@synthemica.com?subject=Customer Inquiry"
 								style="text-decoration:none; color:#333;">
-								info@medivesta.com
+								info@synthemica.com
 							</a>
 						</div>
 					</div>
@@ -196,29 +196,23 @@
 
 				<div class="col-sm-5 col-md-5">
 					<div class="director-image">
-						<div class="director-image-title">Mr. Chanaka Indrajith</div>
-						<img src="./images/Team/COO-Image.png" alt="bos-photo">
+						<div class="director-image-title">Mr. Senitha Wanigasinghe</div>
+						<img src="./images/Team/MD-SW-Image.png" alt="bos-photo">
 					</div>
 					<div class="margin-bottom-30"></div>
 				</div>
 				<div class="col-sm-7 col-md-7">
-					<h3 class="director-title">Mr. Chanaka Indrajith</h3>
-					<div class="director-position">Director/COO - Medivesta Private Limited</div>
+					<h3 class="director-title">Mr. Senitha Wanigasinghe</h3>
+					<div class="director-position">Managing Director - Synthemica Private Limited</div>
 					<div class="margin-bottom-30"></div>
-					<p>Mr. Chanaka Indrajith currently serves as the Director/Chief Operating Officer (COO) at Medivesta
-						(Pvt) Limited within the Divesta Group of Companies.. A dedicated professional, he has played
-						pivotal roles in pharmaceutical manufacturing management, quality assurance, and research and
-						development since 2013.</p>
-					<p>He holds a Bachelor’s degree in Pharmacy from the University of Peradeniya and a Master of
-						Business Administration (MBA) from the University of Wales, Post graduate diplomas in Medicinal
-						chemistry, Business, Finance and Strategy. Mr. Indrajith is currently pursuing his Doctorate at
-						the University of Colombo.</p>
-					<p>&nbsp;</p>
+					<p>Mr. Senitha Wanigasinghe is a Chartered Chemist and graduated from Imperial College London in the
+						United Kingdom with M.Sci honours in Medicinal chemistry. He has previously worked in numerous
+						international organizations such as Livisto, Spain and GlaxoSmithKline, UK.
+					</p>
 
 					<blockquote>
-						<p>As a visiting lecturer at esteemed institutions such as the University of Peradeniya and the
-							University of Ruhuna since 2012, he imparts his extensive knowledge in pharmaceutical
-							Technology, management, quality assurance, and research and development.</p>
+						<p>He has gained experience in the pharmaceutical and consumer health care industry specifically in
+						the Research & development of new products and analytical chemistry.</p>
 					</blockquote>
 				</div>
 
@@ -246,12 +240,11 @@
 							<img src="images/600x600.jpg" alt="">
 						</div>
 						<div class="body-content">
-							<div class="people">Rome Doel</div>
-							<div class="position">Technical Head, Refineries</div>
-							<div class="excert">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor.</div>
+							<div class="people">A. D. Dharmarathne</div>
+							<div class="position">Designation</div>
+							<div class="excert"></div>
 							<div class="phone">
-								<span class="fa fa-envelope-o"></span> 654-123987
+								<span class="fa fa-envelope-o"></span> Email
 							</div>
 						</div>
 					</div>
@@ -269,12 +262,11 @@
 							<img src="images/600x600.jpg" alt="">
 						</div>
 						<div class="body-content">
-							<div class="people">Annisa Doel</div>
-							<div class="position">Cheif Finance Officer</div>
-							<div class="excert">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor.</div>
+							<div class="people">Ramain</div>
+							<div class="position">Designation</div>
+							<div class="excert"></div>
 							<div class="phone">
-								<span class="fa fa-envelope-o"></span> 654-123987
+								<span class="fa fa-envelope-o"></span> Email
 							</div>
 						</div>
 					</div>
