--- a/faq.html
+++ b/faq.html
@@ -57,7 +57,7 @@
 					<div class="col-sm-5 col-md-6">
 						<div class="topbar-left">
 							<div class="welcome-text">
-							Verified • Validated • Trusted
+							Sourced • Manufactured • Assured
 							</div>
 						</div>
 					</div>
@@ -101,9 +101,9 @@
 						</div>
 						<div class="body-content">
 							<div class="heading">Email Support</div>
-							<a href="mailto:info@medivesta.com?subject=Customer Inquiry"
+							<a href="mailto:info@synthemica.com?subject=Customer Inquiry"
 								style="text-decoration:none; color:#333;">
-								info@medivesta.com
+								info@synthemica.com
 							</a>
 						</div>
 					</div>
