--- a/about-team.html
+++ b/about-team.html
@@ -92,308 +92,280 @@
 		<!-- TOPBAR LOGO SECTION -->
 		<div class="topbar-logo">
 			<div class="container">
+				<!-- NAVBAR SECTION -->
+				<div class="navbar navbar-main">
 
+					<div class="container container-nav">
+						<div class="rowe">
 
-				<div class="contact-info">
-					<!-- INFO 1 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-envelope-o"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Email Support</div>
-							<a href="mailto:info@synthemica.com?subject=Customer Inquiry"
-								style="text-decoration:none; color:#333;">
-								info@synthemica.com
-							</a>
-						</div>
-					</div>
-					<!-- INFO 2 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-phone"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Call Support</div>
-							<a href="tel:+94112893922" style="text-decoration:none; color:#333;">
-								+94 112 893 922
-							</a>
-						</div>
-					</div>
-					<!-- INFO 3 -->
-					<a href="contact.html" title="" class="btn btn-cta pull-right">GET A QUOTE</a>
-
-				</div>
-			</div>
-		</div>
-
-		<!-- NAVBAR SECTION -->
-		<div class="navbar navbar-main">
-
-			<div class="container container-nav">
-				<div class="rowe">
-
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".navbar-collapse">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-
-					</div>
-
-					<a class="navbar-brand" href="index.html">
-						<img src="images/SYNTHEMICA.png" alt="" />
-					</a>
-
-					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-center">
-							<li><a href="index.html">HOME</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
-									role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
-										class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="about-company.html">OUR COMPANY</a></li>
-									<li><a href="about-team.html">OUR TEAM</a></li>
-									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
-								</ul>
-							</li>
-							<li><a href="products.html">PRODUCTS</a></li>
-							<li><a href="services.html">SERVICES</a></li>
-							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
-							<li><a href="career.html">CAREERS</a></li>
-							<li><a href="contact.html">CONTACT US</a></li>
-						</ul>
-					</nav>
-
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- BANNER -->
-	<div class="section banner-page about">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-					<div class="title-page">Our Team</div>
-					<ol class="breadcrumb">
-						<li><a href="index.html">Who We Are</a></li>
-						<li class="active">Our Team</li>
-					</ol>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Team -->
-	<div class="section why overlap">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-5 col-md-5">
-					<div class="director-image">
-						<div class="director-image-title">Mr. Senitha Wanigasinghe</div>
-						<img src="./images/Team/MD-SW-Image.png" alt="bos-photo">
-					</div>
-					<div class="margin-bottom-30"></div>
-				</div>
-				<div class="col-sm-7 col-md-7">
-					<h3 class="director-title">Mr. Senitha Wanigasinghe</h3>
-					<div class="director-position">Managing Director - Synthemica Private Limited</div>
-					<div class="margin-bottom-30"></div>
-					<p>Mr. Senitha Wanigasinghe is a Chartered Chemist and graduated from Imperial College London in the
-						United Kingdom with M.Sci honours in Medicinal chemistry. He has previously worked in numerous
-						international organizations such as Livisto, Spain and GlaxoSmithKline, UK.
-					</p>
-
-					<blockquote>
-						<p>He has gained experience in the pharmaceutical and consumer health care industry specifically in
-						the Research & development of new products and analytical chemistry.</p>
-					</blockquote>
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<div class="section about ">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-sm-12 col-md-12">
-					<h2 class="section-heading">
-						Our Team
-					</h2>
-				</div>
-				<div class="col-sm-6 col-md-6">
-					<div class="box-team">
-						<div class="box-image">
-							<div class="sosmed">
-								<!-- <a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-skype"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a> -->
-							</div>
-							<img src="images/600x600.jpg" alt="">
-						</div>
-						<div class="body-content">
-							<div class="people">A. D. Dharmarathne</div>
-							<div class="position">Designation</div>
-							<div class="excert"></div>
-							<div class="phone">
-								<span class="fa fa-envelope-o"></span> Email
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-6">
-					<div class="box-team">
-						<div class="box-image">
-							<div class="sosmed">
-								<!-- <a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-skype"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a> -->
-							</div>
-							<img src="images/600x600.jpg" alt="">
-						</div>
-						<div class="body-content">
-							<div class="people">Ramain</div>
-							<div class="position">Designation</div>
-							<div class="excert"></div>
-							<div class="phone">
-								<span class="fa fa-envelope-o"></span> Email
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-
-	<!-- FOOTER SECTION -->
-	<div class="footer">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
-						<p>Verified • Validated • Trusted</p>
-						<div class="footer-sosmed">
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-facebook"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-twitter"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-youtube"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-linkedin"></i>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Who We Are
-						</div>
-						<ul class="list">
-							<li><a href="about-company.html" title="">About Comapny</a></li>
-							<li><a href="about-team.html" title="">Our Team</a></li>
-							<li><a href="about-partners.html" title="">Global Partners</a></li>
-							<li><a href="news-grid.html" title="">News & Events</a></li>
-							<li><a href="career.html" title="">Careers</a></li>
-							<li><a href="contact.html" title="">Contact Us</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Our Services
-						</div>
-						<ul class="list">
-							<li><a href="services.html" title="">Analytical Services</a></li>
-							<li><a href="services.html" title="">Chemical Identification</a></li>
-							<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
-							<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
-							<li><a href="services.html" title="">Stability Analysis</a></li>
-							<li><a href="services.html" title="">R&D Formulations</a></li>
-							<li><a href="services.html" title="">Microbiological Analysis</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Subscribe
-						</div>
-						<p>Subscribe us to get more updates</p>
-						<form action="subscribe.php" method="POST" class="footer-subscribe">
-							<div class="subscribe-row">
-								<input type="email" name="email" class="form-control subscribe-input"
-									placeholder="Enter your email" required>
-
-								<button type="submit" id="p_submit" class="subscribe-btn">
-									<i class="fa fa-envelope"></i>
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse"
+									data-target=".navbar-collapse">
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
 								</button>
+
 							</div>
-							<p>Get latest updates...</p>
-						</form>
+
+							<a class="navbar-brand" href="index.html">
+
+							</a>
+							<br>
+							<img src="images/LOGO.gif" alt="" />
+							<br>
+
+							<nav class="navbar-collapse collapse">
+								<ul class="nav navbar-nav navbar-center">
+									<li><a href="index.html">HOME</a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
+											role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
+												class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="about-company.html">OUR COMPANY</a></li>
+											<li><a href="about-team.html">OUR TEAM</a></li>
+											<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
+										</ul>
+									</li>
+									<li><a href="products.html">PRODUCTS</a></li>
+									<li><a href="services.html">SERVICES</a></li>
+									<li><a href="news-grid.html">NEWS & EVENTS</a></li>
+									<li><a href="career.html">CAREERS</a></li>
+									<li><a href="contact.html">CONTACT US</a></li>
+								</ul>
+							</nav>
+
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- BANNER -->
+			<div class="section banner-page about">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-12">
+							<div class="title-page">Our Team</div>
+							<ol class="breadcrumb">
+								<li><a href="index.html">Who We Are</a></li>
+								<li class="active">Our Team</li>
+							</ol>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="fcopy">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-12">
-						<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
-							Design & Developed by IT Department</p>
+			<!-- Team -->
+			<div class="section why overlap">
+				<div class="container">
+					<div class="row">
+
+						<div class="col-sm-5 col-md-5">
+							<div class="director-image">
+								<div class="director-image-title">Mr. Senitha Wanigasinghe</div>
+								<img src="./images/Team/MD-SW-Image.png" alt="bos-photo">
+							</div>
+							<div class="margin-bottom-30"></div>
+						</div>
+						<div class="col-sm-7 col-md-7">
+							<h3 class="director-title">Mr. Senitha Wanigasinghe</h3>
+							<div class="director-position">Managing Director - Synthemica Private Limited</div>
+							<div class="margin-bottom-30"></div>
+							<p>Mr. Senitha Wanigasinghe is a Chartered Chemist and graduated from Imperial College
+								London in the
+								United Kingdom with M.Sci honours in Medicinal chemistry. He has previously worked in
+								numerous
+								international organizations such as Livisto, Spain and GlaxoSmithKline, UK.
+							</p>
+
+							<blockquote>
+								<p>He has gained experience in the pharmaceutical and consumer health care industry
+									specifically in
+									the Research & development of new products and analytical chemistry.</p>
+							</blockquote>
+						</div>
+
 					</div>
 				</div>
 			</div>
-		</div>
+			<div class="section about ">
+				<div class="container">
+					<div class="row">
 
-	</div>
+						<div class="col-sm-12 col-md-12">
+							<h2 class="section-heading">
+								Our Team
+							</h2>
+						</div>
+						<div class="col-sm-6 col-md-6">
+							<div class="box-team">
+								<div class="box-image">
+									<div class="sosmed">
+										<!-- <a href="#"><i class="fa fa-facebook"></i></a>
+								<a href="#"><i class="fa fa-twitter"></i></a>
+								<a href="#"><i class="fa fa-skype"></i></a>
+								<a href="#"><i class="fa fa-linkedin"></i></a> -->
+									</div>
+									<img src="images/600x600.jpg" alt="">
+								</div>
+								<div class="body-content">
+									<div class="people">A. D. Dharmarathne</div>
+									<div class="position">Designation</div>
+									<div class="excert"></div>
+									<div class="phone">
+										<span class="fa fa-envelope-o"></span> Email
+									</div>
+								</div>
+							</div>
+						</div>
 
-	<!-- JS VENDOR -->
-	<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
-	<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/vendor/easings.js"></script>
-	<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
+						<div class="col-sm-6 col-md-6">
+							<div class="box-team">
+								<div class="box-image">
+									<div class="sosmed">
+										<!-- <a href="#"><i class="fa fa-facebook"></i></a>
+								<a href="#"><i class="fa fa-twitter"></i></a>
+								<a href="#"><i class="fa fa-skype"></i></a>
+								<a href="#"><i class="fa fa-linkedin"></i></a> -->
+									</div>
+									<img src="images/600x600.jpg" alt="">
+								</div>
+								<div class="body-content">
+									<div class="people">Ramain</div>
+									<div class="position">Designation</div>
+									<div class="excert"></div>
+									<div class="phone">
+										<span class="fa fa-envelope-o"></span> Email
+									</div>
+								</div>
+							</div>
+						</div>
 
-	<!-- sendmail -->
-	<script type="text/javascript" src="js/vendor/validator.min.js"></script>
-	<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
+					</div>
+				</div>
+			</div>
 
-	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
 
-	<script type="text/javascript" src="js/script.js"></script>
+			<!-- FOOTER SECTION -->
+			<div class="footer">
+
+				<div class="container">
+
+					<div class="row">
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
+								<p>Verified • Validated • Trusted</p>
+								<div class="footer-sosmed">
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-facebook"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-twitter"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-youtube"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-linkedin"></i>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Who We Are
+								</div>
+								<ul class="list">
+									<li><a href="about-company.html" title="">About Comapny</a></li>
+									<li><a href="about-team.html" title="">Our Team</a></li>
+									<li><a href="about-partners.html" title="">Global Partners</a></li>
+									<li><a href="news-grid.html" title="">News & Events</a></li>
+									<li><a href="career.html" title="">Careers</a></li>
+									<li><a href="contact.html" title="">Contact Us</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Our Services
+								</div>
+								<ul class="list">
+									<li><a href="services.html" title="">Analytical Services</a></li>
+									<li><a href="services.html" title="">Chemical Identification</a></li>
+									<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
+									<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
+									<li><a href="services.html" title="">Stability Analysis</a></li>
+									<li><a href="services.html" title="">R&D Formulations</a></li>
+									<li><a href="services.html" title="">Microbiological Analysis</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Subscribe
+								</div>
+								<p>Subscribe us to get more updates</p>
+								<form action="subscribe.php" method="POST" class="footer-subscribe">
+									<div class="subscribe-row">
+										<input type="email" name="email" class="form-control subscribe-input"
+											placeholder="Enter your email" required>
+
+										<button type="submit" id="p_submit" class="subscribe-btn">
+											<i class="fa fa-envelope"></i>
+										</button>
+									</div>
+									<p>Get latest updates...</p>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="fcopy">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 col-md-12">
+								<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
+									Design & Developed by IT Department</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- JS VENDOR -->
+			<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
+			<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
+			<script type="text/javascript" src="js/vendor/easings.js"></script>
+			<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
+
+			<!-- sendmail -->
+			<script type="text/javascript" src="js/vendor/validator.min.js"></script>
+			<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
+
+			<script type='text/javascript'
+				src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
+
+			<script type="text/javascript" src="js/script.js"></script>
 
 
 </body>
