--- a/career.html
+++ b/career.html
@@ -92,166 +92,140 @@
 		<!-- TOPBAR LOGO SECTION -->
 		<div class="topbar-logo">
 			<div class="container">
-				<div class="contact-info">
-					<!-- INFO 1 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-envelope-o"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Email Support</div>
-							<a href="mailto:info@synthemica.com?subject=Customer Inquiry"
-								style="text-decoration:none; color:#333;">
-								info@synthemica.com
+				<!-- NAVBAR SECTION -->
+				<div class="navbar navbar-main">
+
+					<div class="container container-nav">
+						<div class="rowe">
+
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse"
+									data-target=".navbar-collapse">
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+
+							</div>
+
+							<a class="navbar-brand" href="index.html">
+
 							</a>
-						</div>
-					</div>
-					<!-- INFO 2 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-phone"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Call Support</div>
-							<a href="tel:+94112893922" style="text-decoration:none; color:#333;">
-								+94 112 893 922
-							</a>
-						</div>
-					</div>
-					<!-- INFO 3 -->
-					<a href="contact.html" title="" class="btn btn-cta pull-right">GET A QUOTE</a>
-				</div>
-			</div>
-		</div>
+							<br>
+							<img src="images/LOGO.gif" alt="" />
+							<br>
 
-		<!-- NAVBAR SECTION -->
-		<div class="navbar navbar-main">
-
-			<div class="container container-nav">
-				<div class="rowe">
-
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".navbar-collapse">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-
-					<a class="navbar-brand" href="index.html">
-						<img src="images/SYNTHEMICA.png" alt="" />
-					</a>
-
-					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-center">
-							<li><a href="index.html">HOME</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
-									role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
-										class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="about-company.html">OUR COMPANY</a></li>
-									<li><a href="about-team.html">OUR TEAM</a></li>
-									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
+							<nav class="navbar-collapse collapse">
+								<ul class="nav navbar-nav navbar-center">
+									<li><a href="index.html">HOME</a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
+											role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
+												class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="about-company.html">OUR COMPANY</a></li>
+											<li><a href="about-team.html">OUR TEAM</a></li>
+											<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
+										</ul>
+									</li>
+									<li><a href="products.html">PRODUCTS</a></li>
+									<li><a href="services.html">SERVICES</a></li>
+									<li><a href="news-grid.html">NEWS & EVENTS</a></li>
+									<li><a href="career.html">CAREERS</a></li>
+									<li><a href="contact.html">CONTACT US</a></li>
 								</ul>
-							</li>
-							<li><a href="products.html">PRODUCTS</a></li>
-							<li><a href="services.html">SERVICES</a></li>
-							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
-							<li><a href="career.html">CAREERS</a></li>
-							<li><a href="contact.html">CONTACT US</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</div>
+							</nav>
 
-	<!-- BANNER -->
-	<div class="section banner-page about">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-					<div class="title-page">Career</div>
-					<ol class="breadcrumb">
-						<li><a href="index.html">Home</a></li>
-						<li class="active">Career</li>
-					</ol>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Team -->
-	<div class="section why overlap">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-					<h3>Open Positions</h3>
-					<p>Apply for your job position and attach your CV here...</p>
-					<div class="margin-bottom-50"></div>
-
-
-					<div class="content">
-						<!-- <p class="section-heading-3">Suspendisse est nunc mollis id elit ac efficitur rutrum mauris. Pellentesque ut orci ac leo dictum viverra ac ac turpis.</p> -->
-						<div class="margin-bottom-30"></div>
-						<h3 class="section-heading-2">
-							Contact Details
-						</h3>
-						<form action="./career.php" class="form-contact" method="post" enctype="multipart/form-data"
-							data-toggle="validator" novalidate="true">
-							<div class="form-group">
-								<input type="text" class="form-control" id="c_name" name="c_name"
-									placeholder="Full Name..." required="">
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<div class="form-group">
-								<input type="email" class="form-control" id="c_email" name="c_email"
-									placeholder="Email Address..." required="">
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<div class="form-group">
-								<input type="text" class="form-control" id="c_contact" name="c_contact"
-									placeholder="Contact Number..." required="">
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<div class="form-group">
-								<input type="text" class="form-control" id="c_position" name="c_position"
-									placeholder="Applying Position...">
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<div class="form-group">
-								<textarea id="c_message" class="form-control" rows="6" name="c_message"
-									placeholder="Write message"></textarea>
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<!-- ✅ CV Upload Field -->
-							<div class="form-group">
-								<label><b>Upload Your CV (PDF / DOCX only)</b></label>
-								<input type="file" class="form-control" name="cv_file" accept=".pdf,.doc,.docx"
-									required>
-								<div class="help-block with-errors"></div>
-							</div>
-
-							<div class="form-group">
-								<div id="success"></div>
-								<button type="submit" class="btn btn-secondary">Submit Your Details</button>
-							</div>
-						</form>
-
-						<div class="margin-bottom-50"></div>
-						<!-- <p><em>Note: Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></p> -->
+						</div>
 					</div>
+				</div>
+
+			</div>
+
+			<!-- BANNER -->
+			<div class="section banner-page about">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-12">
+							<div class="title-page">Career</div>
+							<ol class="breadcrumb">
+								<li><a href="index.html">Home</a></li>
+								<li class="active">Career</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Team -->
+			<div class="section why overlap">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-12">
+							<h3>Open Positions</h3>
+							<p>Apply for your job position and attach your CV here...</p>
+							<div class="margin-bottom-50"></div>
+
+
+							<div class="content">
+								<!-- <p class="section-heading-3">Suspendisse est nunc mollis id elit ac efficitur rutrum mauris. Pellentesque ut orci ac leo dictum viverra ac ac turpis.</p> -->
+								<div class="margin-bottom-30"></div>
+								<h3 class="section-heading-2">
+									Contact Details
+								</h3>
+								<form action="./career.php" class="form-contact" method="post"
+									enctype="multipart/form-data" data-toggle="validator" novalidate="true">
+									<div class="form-group">
+										<input type="text" class="form-control" id="c_name" name="c_name"
+											placeholder="Full Name..." required="">
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<div class="form-group">
+										<input type="email" class="form-control" id="c_email" name="c_email"
+											placeholder="Email Address..." required="">
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<div class="form-group">
+										<input type="text" class="form-control" id="c_contact" name="c_contact"
+											placeholder="Contact Number..." required="">
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<div class="form-group">
+										<input type="text" class="form-control" id="c_position" name="c_position"
+											placeholder="Applying Position...">
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<div class="form-group">
+										<textarea id="c_message" class="form-control" rows="6" name="c_message"
+											placeholder="Write message"></textarea>
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<!-- ✅ CV Upload Field -->
+									<div class="form-group">
+										<label><b>Upload Your CV (PDF / DOCX only)</b></label>
+										<input type="file" class="form-control" name="cv_file" accept=".pdf,.doc,.docx"
+											required>
+										<div class="help-block with-errors"></div>
+									</div>
+
+									<div class="form-group">
+										<div id="success"></div>
+										<button type="submit" class="btn btn-secondary">Submit Your Details</button>
+									</div>
+								</form>
+
+								<div class="margin-bottom-50"></div>
+								<!-- <p><em>Note: Consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></p> -->
+							</div>
 
 
 
-					<!-- <div class="career-tabs" data-example-id="togglable-tabs">
+							<!-- <div class="career-tabs" data-example-id="togglable-tabs">
 						<ul id="myTabs" class="nav nav-tabs" role="tablist">
 							<li class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab" aria-expanded="true">Manager</a></li>
 							<li class=""><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab" aria-expanded="false">Marketing</a></li>
@@ -378,130 +352,131 @@
 							
 						</div>
 					</div> -->
-					<!-- END TAB -->
+							<!-- END TAB -->
 
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 
-	<!-- FOOTER SECTION -->
-	<div class="footer">
+			<!-- FOOTER SECTION -->
+			<div class="footer">
 
-		<div class="container">
+				<div class="container">
 
-			<div class="row">
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
-						<p>Verified • Validated • Trusted</p>
-						<div class="footer-sosmed">
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-facebook"></i>
+					<div class="row">
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
+								<p>Verified • Validated • Trusted</p>
+								<div class="footer-sosmed">
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-facebook"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-twitter"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-youtube"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-linkedin"></i>
+										</div>
+									</a>
 								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-twitter"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-youtube"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-linkedin"></i>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Who We Are
-						</div>
-						<ul class="list">
-							<li><a href="about-company.html" title="">About Comapny</a></li>
-							<li><a href="about-team.html" title="">Our Team</a></li>
-							<li><a href="about-partners.html" title="">Global Partners</a></li>
-							<li><a href="news-grid.html" title="">News & Events</a></li>
-							<li><a href="career.html" title="">Careers</a></li>
-							<li><a href="contact.html" title="">Contact Us</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Our Services
-						</div>
-						<ul class="list">
-							<li><a href="services.html" title="">Analytical Services</a></li>
-							<li><a href="services.html" title="">Chemical Identification</a></li>
-							<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
-							<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
-							<li><a href="services.html" title="">Stability Analysis</a></li>
-							<li><a href="services.html" title="">R&D Formulations</a></li>
-							<li><a href="services.html" title="">Microbiological Analysis</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Subscribe
-						</div>
-						<p>Subscribe us to get more updates</p>
-						<form action="subscribe.php" method="POST" class="footer-subscribe">
-							<div class="subscribe-row">
-								<input type="email" name="email" class="form-control subscribe-input"
-									placeholder="Enter your email" required>
-
-								<button type="submit" id="p_submit" class="subscribe-btn">
-									<i class="fa fa-envelope"></i>
-								</button>
 							</div>
-							<p>Get latest updates...</p>
-						</form>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Who We Are
+								</div>
+								<ul class="list">
+									<li><a href="about-company.html" title="">About Comapny</a></li>
+									<li><a href="about-team.html" title="">Our Team</a></li>
+									<li><a href="about-partners.html" title="">Global Partners</a></li>
+									<li><a href="news-grid.html" title="">News & Events</a></li>
+									<li><a href="career.html" title="">Careers</a></li>
+									<li><a href="contact.html" title="">Contact Us</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Our Services
+								</div>
+								<ul class="list">
+									<li><a href="services.html" title="">Analytical Services</a></li>
+									<li><a href="services.html" title="">Chemical Identification</a></li>
+									<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
+									<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
+									<li><a href="services.html" title="">Stability Analysis</a></li>
+									<li><a href="services.html" title="">R&D Formulations</a></li>
+									<li><a href="services.html" title="">Microbiological Analysis</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Subscribe
+								</div>
+								<p>Subscribe us to get more updates</p>
+								<form action="subscribe.php" method="POST" class="footer-subscribe">
+									<div class="subscribe-row">
+										<input type="email" name="email" class="form-control subscribe-input"
+											placeholder="Enter your email" required>
+
+										<button type="submit" id="p_submit" class="subscribe-btn">
+											<i class="fa fa-envelope"></i>
+										</button>
+									</div>
+									<p>Get latest updates...</p>
+								</form>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
 
-		<div class="fcopy">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-12">
-						<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
-							Design & Developed by IT Department</p>
+				<div class="fcopy">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 col-md-12">
+								<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
+									Design & Developed by IT Department</p>
+							</div>
+						</div>
 					</div>
 				</div>
+
 			</div>
-		</div>
 
-	</div>
+			<!-- JS VENDOR -->
+			<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
+			<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
+			<script type="text/javascript" src="js/vendor/easings.js"></script>
+			<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
 
-	<!-- JS VENDOR -->
-	<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
-	<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/vendor/easings.js"></script>
-	<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
+			<!-- sendmail -->
+			<script type="text/javascript" src="js/vendor/validator.min.js"></script>
+			<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
 
-	<!-- sendmail -->
-	<script type="text/javascript" src="js/vendor/validator.min.js"></script>
-	<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
+			<script type='text/javascript'
+				src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
 
-	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
-
-	<script type="text/javascript" src="js/script.js"></script>
+			<script type="text/javascript" src="js/script.js"></script>
 
 
 </body>
