--- a/news-grid.html
+++ b/news-grid.html
@@ -92,131 +92,101 @@
 		<!-- TOPBAR LOGO SECTION -->
 		<div class="topbar-logo">
 			<div class="container">
+				<!-- NAVBAR SECTION -->
+				<div class="navbar navbar-main">
 
+					<div class="container container-nav">
+						<div class="rowe">
 
-				<div class="contact-info">
-					<!-- INFO 1 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-envelope-o"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Email Support</div>
-							<a href="mailto:info@synthemica.com?subject=Customer Inquiry"
-								style="text-decoration:none; color:#333;">
-								info@synthemica.com
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse"
+									data-target=".navbar-collapse">
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+
+							</div>
+
+							<a class="navbar-brand" href="index.html">
+
 							</a>
-						</div>
-					</div>
-					<!-- INFO 2 -->
-					<div class="box-icon-1">
-						<div class="icon">
-							<div class="fa fa-phone"></div>
-						</div>
-						<div class="body-content">
-							<div class="heading">Call Support</div>
-							<a href="tel:+94112893922" style="text-decoration:none; color:#333;">
-								+94 112 893 922
-							</a>
-						</div>
-					</div>
-					<!-- INFO 3 -->
-					<a href="contact.html" title="" class="btn btn-cta pull-right">GET A QUOTE</a>
+							<br>
+							<img src="images/LOGO.gif" alt="" />
+							<br>
 
-				</div>
-			</div>
-		</div>
-
-		<!-- NAVBAR SECTION -->
-		<div class="navbar navbar-main">
-
-			<div class="container container-nav">
-				<div class="rowe">
-
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".navbar-collapse">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-
-					</div>
-
-					<a class="navbar-brand" href="index.html">
-						<img src="images/SYNTHEMICA.png" alt="" />
-					</a>
-
-					<nav class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-center">
-							<li><a href="index.html">HOME</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
-									role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
-										class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="about-company.html">OUR COMPANY</a></li>
-									<li><a href="about-team.html">OUR TEAM</a></li>
-									<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
+							<nav class="navbar-collapse collapse">
+								<ul class="nav navbar-nav navbar-center">
+									<li><a href="index.html">HOME</a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
+											role="button" aria-haspopup="true" aria-expanded="false">ABOUT US<span
+												class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="about-company.html">OUR COMPANY</a></li>
+											<li><a href="about-team.html">OUR TEAM</a></li>
+											<li><a href="about-partners.html">GLOBAL PARTNERS</a></li>
+										</ul>
+									</li>
+									<li><a href="products.html">PRODUCTS</a></li>
+									<li><a href="services.html">SERVICES</a></li>
+									<li><a href="news-grid.html">NEWS & EVENTS</a></li>
+									<li><a href="career.html">CAREERS</a></li>
+									<li><a href="contact.html">CONTACT US</a></li>
 								</ul>
-							</li>
-							<li><a href="products.html">PRODUCTS</a></li>
-							<li><a href="services.html">SERVICES</a></li>
-							<li><a href="news-grid.html">NEWS & EVENTS</a></li>
-							<li><a href="career.html">CAREERS</a></li>
-							<li><a href="contact.html">CONTACT US</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
+							</nav>
 
-	</div>
-
-	<!-- BANNER -->
-	<div class="section banner-page about">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-					<div class="title-page">News & Events</div>
-					<ol class="breadcrumb">
-						<li><a href="index.html">Home</a></li>
-						<li class="active">News & Events</li>
-					</ol>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- News & Events -->
-	<div class="section why overlap">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 col-md-4">
-					<!-- News 1 -->
-					<div class="box-news-1">
-						<div class="">
-							<a href="#" data-toggle="modal" data-target="#newsModal1"><img
-									src="images/News-And-Events/Dyvesta-Night.jpg" alt="" class="img-responsive"></a>
 						</div>
-						<div class="body">
-							<div class="title">
-								<a href="#" data-toggle="modal" data-target="#newsModal1">
-									Future of Dyvesta - Annual Gathering
-								</a>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- BANNER -->
+			<div class="section banner-page about">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-12">
+							<div class="title-page">News & Events</div>
+							<ol class="breadcrumb">
+								<li><a href="index.html">Home</a></li>
+								<li class="active">News & Events</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- News & Events -->
+			<div class="section why overlap">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-6 col-md-4">
+							<!-- News 1 -->
+							<div class="box-news-1">
+								<div class="">
+									<a href="#" data-toggle="modal" data-target="#newsModal1"><img
+											src="images/News-And-Events/Dyvesta-Night.jpg" alt=""
+											class="img-responsive"></a>
+								</div>
+								<div class="body">
+									<div class="title">
+										<a href="#" data-toggle="modal" data-target="#newsModal1">
+											Future of Dyvesta - Annual Gathering
+										</a>
+									</div>
+
+									<div class="meta">
+										<span class="date"><i class="fa fa-clock-o"></i> March 30, 2025</span>
+										<!-- <span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span> -->
+									</div>
+								</div>
 							</div>
 
-							<div class="meta">
-								<span class="date"><i class="fa fa-clock-o"></i> March 30, 2025</span>
-								<!-- <span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span> -->
-							</div>
 						</div>
 					</div>
 
-				</div>
-			</div>
-
-			<!-- <div class="row">
+					<!-- <div class="row">
 				<div class="col-sm-12 col-md-12">
 					<ul class="pagination">
 						<li class="active"><a href="#">1</a></li>
@@ -226,175 +196,182 @@
 				</div>
 			</div> -->
 
-		</div>
-	</div>
-
-	<!-- NEWS POPUP MODAL 1 -->
-	<div class="modal fade" id="newsModal1" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content">
-
-				<div class="modal-header">
-					<h4 class="modal-title" id="newsModalLabel">Future of Dyvesta - Annual Gathering
-					</h4>
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
 				</div>
-
-				<div class="modal-body">
-					<img src="images/News-And-Events/Dyvesta-Night.jpg" class="img-responsive"
-						style="width:100%; border-radius:6px; margin-bottom:15px;">
-
-					<p>
-						<strong>Event Date:</strong> March 30, 2025<br><br>
-						Dyvesta’s Annual Gathering highlighted the company's future roadmap, innovation
-						direction,
-						strategic partnerships, and new quality assurance upgrades.
-						The event brought together experts, stakeholders, and industry professionals to
-						discuss
-						upcoming technologies and Synthemica’s commitment to trusted manufacturing services.
-					</p>
-
-					<p>
-						On March 30th, 2025, DYVESTA Group marked a significant chapter in its journey with the Future
-						of DYVESTA event. This exclusive gathering brought together our leadership, partners, and team
-						members to reflect on our achievements and pave the way forward.
-
-						During the event, DYVESTA proudly introduced its newly appointed board members — dynamic leaders
-						who bring fresh vision and strength to our mission in animal health and nutrition. Key
-						discussions centered around strategic movements and innovations that will shape the future of
-						DYVESTA.
-
-						This milestone moment was not just about planning forward—it was a celebration of unity, growth,
-						and shared purpose. As we continue to evolve, DYVESTA remains committed to driving excellence,
-						sustainability, and global impact in the animal health industry.
-					</p>
-				</div>
-
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-				</div>
-
 			</div>
-		</div>
-	</div>
 
-	<!-- FOOTER SECTION -->
-	<div class="footer">
+			<!-- NEWS POPUP MODAL 1 -->
+			<div class="modal fade" id="newsModal1" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
 
-		<div class="container">
-
-			<div class="row">
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
-						<p>Verified • Validated • Trusted</p>
-						<div class="footer-sosmed">
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-facebook"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-twitter"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-youtube"></i>
-								</div>
-							</a>
-							<a href="#" title="">
-								<div class="item">
-									<i class="fa fa-linkedin"></i>
-								</div>
-							</a>
+						<div class="modal-header">
+							<h4 class="modal-title" id="newsModalLabel">Future of Dyvesta - Annual Gathering
+							</h4>
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
 						</div>
+
+						<div class="modal-body">
+							<img src="images/News-And-Events/Dyvesta-Night.jpg" class="img-responsive"
+								style="width:100%; border-radius:6px; margin-bottom:15px;">
+
+							<p>
+								<strong>Event Date:</strong> March 30, 2025<br><br>
+								Dyvesta’s Annual Gathering highlighted the company's future roadmap, innovation
+								direction,
+								strategic partnerships, and new quality assurance upgrades.
+								The event brought together experts, stakeholders, and industry professionals to
+								discuss
+								upcoming technologies and Synthemica’s commitment to trusted manufacturing services.
+							</p>
+
+							<p>
+								On March 30th, 2025, DYVESTA Group marked a significant chapter in its journey with the
+								Future
+								of DYVESTA event. This exclusive gathering brought together our leadership, partners,
+								and team
+								members to reflect on our achievements and pave the way forward.
+
+								During the event, DYVESTA proudly introduced its newly appointed board members — dynamic
+								leaders
+								who bring fresh vision and strength to our mission in animal health and nutrition. Key
+								discussions centered around strategic movements and innovations that will shape the
+								future of
+								DYVESTA.
+
+								This milestone moment was not just about planning forward—it was a celebration of unity,
+								growth,
+								and shared purpose. As we continue to evolve, DYVESTA remains committed to driving
+								excellence,
+								sustainability, and global impact in the animal health industry.
+							</p>
+						</div>
+
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+						</div>
+
 					</div>
 				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Who We Are
-						</div>
-						<ul class="list">
-							<li><a href="about-company.html" title="">About Comapny</a></li>
-							<li><a href="about-team.html" title="">Our Team</a></li>
-							<li><a href="about-partners.html" title="">Global Partners</a></li>
-							<li><a href="news-grid.html" title="">News & Events</a></li>
-							<li><a href="career.html" title="">Careers</a></li>
-							<li><a href="contact.html" title="">Contact Us</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Our Services
-						</div>
-						<ul class="list">
-							<li><a href="services.html" title="">Analytical Services</a></li>
-							<li><a href="services.html" title="">Chemical Identification</a></li>
-							<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
-							<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
-							<li><a href="services.html" title="">Stability Analysis</a></li>
-							<li><a href="services.html" title="">R&D Formulations</a></li>
-							<li><a href="services.html" title="">Microbiological Analysis</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Subscribe
-						</div>
-						<p>Subscribe us to get more updates</p>
-						<form action="subscribe.php" method="POST" class="footer-subscribe">
-							<div class="subscribe-row">
-								<input type="email" name="email" class="form-control subscribe-input"
-									placeholder="Enter your email" required>
+			</div>
 
-								<button type="submit" id="p_submit" class="subscribe-btn">
-									<i class="fa fa-envelope"></i>
-								</button>
+			<!-- FOOTER SECTION -->
+			<div class="footer">
+
+				<div class="container">
+
+					<div class="row">
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
+								<p>Verified • Validated • Trusted</p>
+								<div class="footer-sosmed">
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-facebook"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-twitter"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-youtube"></i>
+										</div>
+									</a>
+									<a href="#" title="">
+										<div class="item">
+											<i class="fa fa-linkedin"></i>
+										</div>
+									</a>
+								</div>
 							</div>
-							<p>Get latest updates...</p>
-						</form>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Who We Are
+								</div>
+								<ul class="list">
+									<li><a href="about-company.html" title="">About Comapny</a></li>
+									<li><a href="about-team.html" title="">Our Team</a></li>
+									<li><a href="about-partners.html" title="">Global Partners</a></li>
+									<li><a href="news-grid.html" title="">News & Events</a></li>
+									<li><a href="career.html" title="">Careers</a></li>
+									<li><a href="contact.html" title="">Contact Us</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Our Services
+								</div>
+								<ul class="list">
+									<li><a href="services.html" title="">Analytical Services</a></li>
+									<li><a href="services.html" title="">Chemical Identification</a></li>
+									<li><a href="services.html" title="">Feed Nutritional Analysis</a></li>
+									<li><a href="services.html" title="">Mycotoxin Analysis</a></li>
+									<li><a href="services.html" title="">Stability Analysis</a></li>
+									<li><a href="services.html" title="">R&D Formulations</a></li>
+									<li><a href="services.html" title="">Microbiological Analysis</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-3 col-md-3">
+							<div class="footer-item">
+								<div class="footer-title">
+									Subscribe
+								</div>
+								<p>Subscribe us to get more updates</p>
+								<form action="subscribe.php" method="POST" class="footer-subscribe">
+									<div class="subscribe-row">
+										<input type="email" name="email" class="form-control subscribe-input"
+											placeholder="Enter your email" required>
+
+										<button type="submit" id="p_submit" class="subscribe-btn">
+											<i class="fa fa-envelope"></i>
+										</button>
+									</div>
+									<p>Get latest updates...</p>
+								</form>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
 
-		<div class="fcopy">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-12">
-						<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
-							Design & Developed by IT Department</p>
+				<div class="fcopy">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 col-md-12">
+								<p class="ftex">&copy; 2025 Synthemica (Pvt) Ltd. - All Rights Reserved |
+									Design & Developed by IT Department</p>
+							</div>
+						</div>
 					</div>
 				</div>
+
 			</div>
-		</div>
 
-	</div>
+			<!-- JS VENDOR -->
+			<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
+			<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
+			<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
+			<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
+			<script type="text/javascript" src="js/vendor/easings.js"></script>
+			<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
 
-	<!-- JS VENDOR -->
-	<script type="text/javascript" src="js/vendor/jquery.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.superslides.js"></script>
-	<script type="text/javascript" src="js/vendor/owl.carousel.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap-hover-dropdown.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/vendor/easings.js"></script>
-	<script type="text/javascript" src="js/vendor/isotope.pkgd.min.js"></script>
+			<!-- sendmail -->
+			<script type="text/javascript" src="js/vendor/validator.min.js"></script>
+			<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
 
-	<!-- sendmail -->
-	<script type="text/javascript" src="js/vendor/validator.min.js"></script>
-	<script type="text/javascript" src="js/vendor/form-scripts.js"></script>
+			<script type='text/javascript'
+				src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
 
-	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false&#038;ver=4.1.5'></script>
-
-	<script type="text/javascript" src="js/script.js"></script>
+			<script type="text/javascript" src="js/script.js"></script>
 
 
 </body>
