--- a/about-company.html
+++ b/about-company.html
@@ -254,8 +254,43 @@
 					<div class="row">
 						<div class="col-sm-12 col-md-12">
 							<h2 class="section-heading">
-								DIRECTOR BOARD
+								BOARD OF DIRECTORS
 							</h2>
+						</div>
+					</div>
+
+					<div class="row">
+						<!-- Mr Uditha's Quote -->
+						<div class="col-sm-5 col-md-5">
+							<div class="director-image">
+								<div class="director-image-title">Mr. Uditha Wanigasinghe</div>
+								<img src="images/Team/UW-Image.png" alt="bos-photo">
+							</div>
+							<div class="margin-bottom-30"></div>
+						</div>
+						<div class="col-sm-7 col-md-7">
+							<h3 class="director-title">Mr. Uditha Wanigasinghe</h3>
+							<div class="director-position">Chairman - Medivesta Private Limited</div>
+							<div class="margin-bottom-30"></div>
+							<p>A giant silhouette behind the FARMCHEMIE success story is the Chairman Mr. Uditha
+								Wanigasinghe who is the founder of the group. He is a Marketer and an Agriculturist
+								holding
+								a National Diploma in Technology (Agriculture) and a National Diploma in Marketing and
+								Business Management. He has followed many professional courses arranged by professional
+								bodies & World renowned suppliers, locally and internationally which include Corporate
+								Management, Distribution Management, Branding, Animal Feed Formulation, Premix
+								Formulation,
+								Vaccines Handling, Agro-chemicals Production, Seed Production, etc.
+							</p>
+							<p>He is an individual who is passionate, accomplishes great things, and devotes countless
+								hours
+								and boundless energy to his work with well versatile entrepreneurial skills, attitudes &
+								attributes which are inherited to him. On his path of career he demonstrates sense of
+								responsibility, initiative, perseverance, solidarity, team spirit, resourcefulness and
+								determination qualities maximally to be recognised as a Most Promising Entrepreneur at
+								Asia
+								Pacific Business Entrepreneurship Awards 2014.</p>
+							<p>&nbsp;</p>
 						</div>
 					</div>
 					<div class="row">
