--- a/about-company.html
+++ b/about-company.html
@@ -264,7 +264,7 @@
 						<div class="col-sm-5 col-md-5">
 							<div class="director-image">
 								<div class="director-image-title">Mr. Uditha Wanigasinghe</div>
-								<img src="images/Team/UW-Image.png" alt="bos-photo">
+								<img src="images/UW-Image.png" alt="bos-photo">
 							</div>
 							<div class="margin-bottom-30"></div>
 						</div>
